--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     // for the documentation about the extensions.json format
     "recommendations": [
         "rogalmic.bash-debug",
-        "timonwong.shellcheck"
+        "timonwong.shellcheck",
+        "mads-hartmann.bash-ide-vscode"
     ]
 }
