--- a/devfile.yaml
+++ b/devfile.yaml
@@ -2,7 +2,8 @@ schemaVersion: 2.1.0
 metadata:
   name: bash
 components:
-  -  container:
+  - name: tools
+    container:
       image: quay.io/aandriienko/universal:test 
       memoryLimit: 3Gi
 
