--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,6 @@
     "recommendations": [
         "rogalmic.bash-debug",
         "timonwong.shellcheck",
-        "mads-hartmann.bash-ide"
+        "mads-hartmann.bash-ide-vscode"
     ]
 }
