--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,7 +4,7 @@ metadata:
 components:
   - name: tools
     container:
-      image: quay.io/aandriienko/universal:test 
+      image: quay.io/devfile/universal-developer-image:ubi8-latest 
       memoryLimit: 3Gi
 commands:
   - id: run-main-script
